# sql-rest-server

./: README.md  api.py  pyproject.toml  test_api.py  validators.py
scripts/: create_table.py
