[tool.poetry]
name = "sql-test-server"
version = "0.1.0"
description = "Example rest api to expose sql db queries"
authors = ["codaishin@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
black = "^23.3.0"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
